# quizzer

./: .gitignore  LICENSE  README.md  pyproject.toml
quizzer/: main.py
quizzer/core/: paths.py  question_pool.py
quizzer/models/: questions.py  quiz.py  settings.py
quizzer/ui/: app.py
quizzer/ui/static/: styles.css
quizzer/ui/templates/: index.html  quiz.html  quiz_confirm.html  quiz_results.html  quiz_review.html  settings.html
